# K2-Zephyr

./: .env  .gitignore  AGENTS.md  CMakeLists.txt  ETHERNET_OTA.md  INSTALL_GUIDE.md  Kconfig  PINOUT.md  README.md  VERSION  build.ps1  build.sh  install_zephyr.ps1  install_zephyr.sh  ota.conf  prj.conf  sysbuild.cmake  test_udp_simple.py
.claude/: settings.local.json
.github/workflows/: main.yml
boards/: esp32c3_supermini.overlay  nucleo_f767zi.conf  nucleo_f767zi.overlay  nucleo_h755zi_q_stm32h755xx_m7.overlay  nucleo_h755zi_q_stm32h755xx_m7_partitions.overlay
dts/bindings/: vendor-prefixes.txt
src/: axis_config.c  axis_config.h  bitmask.c  bitmask.h  canbus.c  canbus.h  control.c  control.h  esc_debug_main.c  icm20948.c  icm20948.h  led.c  main.c  net.c  net.h  pid_config.c  resource_monitor.c  resource_monitor.h  vn100s.c  vn100s.h
src/depth/: ms5837.c  ms5837.h
src/display/: oled.c  oled.h
src/imu/: axis_config.c  vn100s.c  vn100s.h
src/net/: control_telemetry.c  control_telemetry.h  frame_control.c  frame_control.h  log_backend_udp.c  net.c  net.h  ota_confirm.c  ota_confirm.h  resource_monitor.c  setpoint_override.c  setpoint_override.h  system_control.c  system_control.h
src/pid/: pid_config.c  pid_config.h  pid_controller.c  pid_controller.h
src/sensors/: depth_sensor_ms5837.c  depth_sensor_ms5837.h
src/vesc/: thruster_mapping.c  thruster_mapping.h  vesc_protocol.c  vesc_protocol.h  vesc_uart_zephyr.c  vesc_uart_zephyr.h
sysbuild/mcuboot/: prj.conf
tools/: k2-ethernet.ps1  k2-ethernet.sh  k2-ota.ps1  k2-ota.sh  k2-thruster-nudge.py
(+27 files in other folders)
